Add functionality to load warp list from database

--- a/src/server/Ebenezer/Ebenezer.vcxproj
+++ b/src/server/Ebenezer/Ebenezer.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -166,6 +166,7 @@
     </ClCompile>
     <ClCompile Include="UdpSocket.cpp" />
     <ClCompile Include="User.cpp" />
+    <ClCompile Include="WarpInfoSet.cpp" />
     <ClCompile Include="ZoneInfoSet.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -220,6 +221,7 @@
     <ClInclude Include="STLMap.h" />
     <ClInclude Include="UdpSocket.h" />
     <ClInclude Include="User.h" />
+    <ClInclude Include="WarpInfoSet.h" />
     <ClInclude Include="ZoneInfoSet.h" />
   </ItemGroup>
   <ItemGroup>
